// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correct page based on toggle value 1`] = `
<Page>
  <div
    className="page"
  >
    <NavBar
      isMobile={false}
      toggle={[Function]}
    >
      <div>
        <nav
          className="navbar"
        >
          <h1>
             :) noon assignment
          </h1>
          <div
            className="navbar__links"
          >
            <a
              href="/"
              id="navbar-home"
              onClick={[Function]}
            >
              Home
            </a>
            <a
              href="/"
              id="navbar-liked"
              onClick={[Function]}
            >
              Liked
            </a>
          </div>
        </nav>
      </div>
    </NavBar>
    <Liked>
      <div
        className="liked"
      >
        <Loader>
          <div
            className="loader"
          />
        </Loader>
      </div>
    </Liked>
  </div>
</Page>
`;

exports[`renders correctly 1`] = `
<div
  className="page"
>
  <div>
    <nav
      className="navbar"
    >
      <h1>
         :) noon assignment
      </h1>
      <div
        className="navbar__links"
      >
        <a
          href="/"
          id="navbar-home"
          onClick={[Function]}
        >
          Home
        </a>
        <a
          href="/"
          id="navbar-liked"
          onClick={[Function]}
        >
          Liked
        </a>
      </div>
    </nav>
  </div>
  <div
    className="home"
  >
    <div
      className="loader"
    />
  </div>
</div>
`;
